--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,10 +11,12 @@ jobs:
   test:
     name: Unittests - ${{ matrix.PYTHON_VERSION }}
     runs-on: ubuntu-latest
+    strategy:
       fail-fast: false
       matrix:
         PYTHON_VERSION: ["3.9"]
 
+    steps:
       - name: Checkout branch
         uses: actions/checkout@v3
         with:
@@ -37,6 +39,7 @@ jobs:
   pre-commit-checks:
     name: "Pre-commit checks - Python 3.9"
     runs-on: ubuntu-latest
+  
     steps:
 
       - name: Checkout branch
