--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,28 +1,28 @@
 repos:
   - repo: https://github.com/Quantco/pre-commit-mirrors-black
-    rev: 19.10b0
+    rev: 22.6.0
     hooks:
       - id: black-conda
         args:
           -   --safe
           -   --target-version=py38
   - repo: https://github.com/Quantco/pre-commit-mirrors-isort
-    rev: ''
+    rev: '5.10.1'
     hooks:
     - id: isort-conda
       additional_dependencies: [toml]
   - repo: https://github.com/Quantco/pre-commit-mirrors-flake8
-    rev: v3.8.4
+    rev: 5.0.4
     hooks:
       - id: flake8-conda
         args:
           -   --max-line-length=88
   - repo: https://github.com/Quantco/pre-commit-mirrors-mypy
-    rev: "0.910"
+    rev: "0.971"
     hooks:
         - id: mypy-conda
           additional_dependencies: [-c, conda-forge, types-setuptools]
   - repo: https://github.com/Quantco/pre-commit-mirrors-pyupgrade
-    rev: 2.18.3
+    rev: 2.37.3
     hooks:
       - id: pyupgrade-conda
