Speed up projection for discrete anchors.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,3 +27,6 @@ line_length = 88
 known_first_party = "anchorboost"
 skip_glob = '\.eggs/*,\.git/*,\.venv/*,build/*,dist/*'
 default_section = 'THIRDPARTY'
+
+[tool.setuptools]
+py-modules = ["anchorboost"]
