--- a/environment.yml
+++ b/environment.yml
@@ -3,8 +3,8 @@ channels:
   - conda-forge
   - nodefaults
 dependencies:
-  - python >=3.7
+  - python >=3.9
   - pytest
   - numpy >=1.19.0
   - matplotlib
-  - lightgbm <4
+  - lightgbm >=4.0.0
