--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ name = "anchorboost"
 description = "Anchor Boosting"
 readme = "README.md"
 version = "0.0.1"
-requires-python = ">=3.7"
+requires-python = ">=3.9"
 authors = [
     { name = "Malte Londschien", email = "malte@londschien.ch" }
 ]
@@ -16,7 +16,7 @@ classifiers = [
     "Programming Language :: Python"
 ]
 dependencies = [
-    "numpy"
+    "numpy", "scipy", "lightgbm"
 ]
 
 [tool.isort]
