--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,12 +9,10 @@ name: CI
 jobs:
 
   test:
-    name: Unit tests - ${{ matrix.PYTHON_VERSION }}
+    name: Unit tests
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
-      matrix:
-        PYTHON_VERSION: ["3.12"]
     defaults:
       run:
         # see https://github.com/conda-incubator/setup-miniconda/#important
@@ -25,10 +23,7 @@ jobs:
         uses: mamba-org/setup-micromamba@d05808540d968a55ca33c798e0661fb98f533c73
         with:
           micromamba-version: 1.5.10-0
-          cache-env: true
           environment-file: environment.yml
-          extra-specs: |
-            python=${{ matrix.PYTHON_VERSION }}
       - name: Install repository
         run: python -m pip install --no-build-isolation --no-deps --disable-pip-version-check -e .
       - name: Pytest
