Update to lgbm 4 (#19)
* Pin lgbm<4.

* Move _proj to utils.

* No backwards compatability.

* Fix tests.

* Update ci

* Add pip?

* setuptools as well?

* pytest-cov

* scikit-learn

* Update ci unit-tests name.

* Add comment.

* categorical_anchor

* Upsi.

--- a/environment.yml
+++ b/environment.yml
@@ -3,8 +3,12 @@ channels:
   - conda-forge
   - nodefaults
 dependencies:
-  - python >=3.7
+  - python >=3.9
   - pytest
   - numpy >=1.19.0
   - matplotlib
-  - lightgbm
+  - lightgbm >=4.0.0
+  - pip
+  - setuptools
+  - pytest-cov
+  - scikit-learn
