--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 requires = ['setuptools', 'setuptools-scm', 'wheel']
 
 [project]
-name = "anchorboost"
+name = "anchorboosting"
 description = "Anchor Boosting"
 readme = "README.md"
 version = "0.0.1"
@@ -10,7 +10,7 @@ requires-python = ">=3.9"
 authors = [
     { name = "Malte Londschien", email = "malte@londschien.ch" }
 ]
-urls = {homepage = "https://github.com/mlondschien/anchorboost/"}
+urls = {homepage = "https://github.com/mlondschien/anchorboosting/"}
 classifiers = [
     "License :: OSI Approved :: BSD License",
     "Programming Language :: Python"
@@ -24,6 +24,6 @@ multi_line_output = 3
 include_trailing_comma = true
 ensure_newline_before_comments = true
 line_length = 88
-known_first_party = "anchorboost"
+known_first_party = "anchorboosting"
 skip_glob = '\.eggs/*,\.git/*,\.venv/*,build/*,dist/*'
 default_section = 'THIRDPARTY'
