--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,6 +17,7 @@ repos:
       - id: flake8-conda
         args:
           -   --max-line-length=88
+          -   --extend-ignore=E203
   - repo: https://github.com/Quantco/pre-commit-mirrors-mypy
     rev: "0.971"
     hooks:
