--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,10 +9,12 @@ name: CI
 jobs:
 
   test:
-    name: Unit tests
+    name: Unit tests - ${{ matrix.PYTHON_VERSION }}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
+      matrix:
+        PYTHON_VERSION: ["3.12"]
     defaults:
       run:
         # see https://github.com/conda-incubator/setup-miniconda/#important
@@ -24,6 +26,8 @@ jobs:
         with:
           micromamba-version: 1.5.10-0
           environment-file: environment.yml
+          extra-specs: |
+            python=${{ matrix.PYTHON_VERSION }}
       - name: Install repository
         run: python -m pip install --no-build-isolation --no-deps --disable-pip-version-check -e .
       - name: Pytest
@@ -38,19 +42,23 @@ jobs:
 
   pre-commit-checks:
     name: "Pre-commit checks - Python 3.12"
+    timeout-minutes: 30
     runs-on: ubuntu-latest
-  
+    env:
+      PRE_COMMIT_USE_MICROMAMBA: 1
+
     steps:
-
       - name: Checkout branch
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3.5.2
+      - name: Set up micromamba
+        uses: mamba-org/setup-micromamba@d05808540d968a55ca33c798e0661fb98f533c73
         with:
-          ref: ${{ github.head_ref }}
-  
+          micromamba-version: 1.5.10-0
+      - name: Add micromamba to GITHUB_PATH
+        run: echo "${HOME}/micromamba-bin" >> "$GITHUB_PATH"
       - name: Install Python 3.12
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
-          python-version: 3.12
-
+          python-version: "3.12"
       - name: Run pre-commit checks
-        uses: pre-commit/action@v3.0.1
+        uses: pre-commit/action@v3.0.0
