Prepare for 0.2.0 release.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,9 @@ requires = ['setuptools', 'setuptools-scm', 'wheel']
 
 [project]
 name = "anchorboosting"
-description = "Anchor Boosting"
+description = "Efficient tree-based nonlinear anchor regression and classification"
 readme = "README.md"
-version = "0.1.0"
+version = "0.2.0"
 requires-python = ">=3.9"
 authors = [
     { name = "Malte Londschien", email = "malte@londschien.ch" }
