Use asv continuous

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,8 +27,8 @@ jobs:
         shell: bash -l {0}
         run: |
           asv machine --machine github --yes
-          asv run --machine github --python=same
-          # asv continuous origin/main HEAD -e --factor 1.05 --machine github
+          # asv run --machine github --python=same
+          asv continuous origin/main HEAD -e --factor 1.05 --machine github --python=same
 
   test:
     name: Unit tests - ${{ matrix.PYTHON_VERSION }}
